# MARC

./: .gitignore  CMakeLists.txt
include/: loc.h  map.h  moves.h  queue.h
src/: main.c  map.c  moves.c  queue.c
